<resources>
    <string name="app_name">TutoringSystem-Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_wages">Browse Wages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_welcome">Welcome</string>
</resources>
